tests/disallowed_operations/assignment_with_different_unit_type.stderr
error[E0308]: mismatched types
  --> tests/disallowed_operations/assignment_with_different_unit_type.rs:18:10
   |
17 |     let mut m2 = Measure::<U2>::new(2.);
   |                  ---------------------- expected due to this value
18 |     m2 = m1;
   |          ^^ expected `Measure<U2>`, found `Measure<U1>`
   |
   = note: expected struct `Measure<U2>`
              found struct `Measure<U1>`
